--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,13 @@
     <title>EBoy</title>
   </head>
   <body>
+    <div id="app"></div>
+
     <script src="index.js" type="text/javascript"></script>
     <script type="text/javascript">
-      Elm.Main.fullscreen();
+      Elm.Main.init({
+        node: document.getElementById('app')
+      });
     </script>
   </body>
 </html>
